[package]
name = "blob_os"
version = "0.1.1"
authors = ["Redson dos Santos <redson@riseup.net>"]
edition = "2021"


[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[unstable]
build-std = ["core", "compiler-builtins"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
