[package]
name = "blob_os"
version = "0.1.1"
authors = ["Redson dos Santos <redson@riseup.net>"]
edition = "2021"


[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.11.2"
vga = "0.2.8"
