[package]
name = "blob_os"
version = "0.1.1"
authors = ["Redson dos Santos <redson@riseup.net>"]
edition = "2018"


[package.metadata.bootimage]
test-timeout = 300 # in seconds
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1

[dependencies]
bootloader = "0.9.23"
pc-keyboard = "0.7.0"
pic8259 = "0.10.4"
spin = "0.9.8"
uart_16550 = "0.2.18"
vga = "0.2.8"
volatile = "0.4.6"
x86_64 = "0.14.10"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
